Authentication Working on Manager App,
For now it is failing to Authenticate, therefore it cant authorize. but this is because of missing Duende IdentityServer Implementations...

that is the next step forward...

--- a/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/wwwroot/index.html
+++ b/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/wwwroot/index.html
@@ -22,13 +22,14 @@
 </head>
 
 <body>
-<div id="app">Loading...</div>
-<!-- Blazor Assembly -->
-<script src="_framework/blazor.webassembly.js"></script>
-<!-- Jquery v3.6 -->
-<script src="lib/jquery/jquery.min.js"></script>
-<!--Bootstrap v5.1-->
-<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <div id="app">Loading...</div>
+    <!--Web Assembly Authentication-->
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+    <!-- Blazor Assembly -->
+    <script src="_framework/blazor.webassembly.js"></script>
+    <!-- Jquery v3.6 -->
+    <script src="lib/jquery/jquery.min.js"></script>
+    <!--Bootstrap v5.1-->
+    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
